@@ -8,36 +8,46 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class SecurityConfig {
-  public static final String PASSWORD_REGEX =
-      "^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[^\\w\\s]).{6,}$";
+public static final String PASSWORD_REGEX =
+    "^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[^A-Za-z0-9\\s]).{6,}$";
 
-  @Value("${app.cors.allowed-origins}")
+  @Value("${app.cors.allowed-origins:}")
   private String allowedOrigins;
 
   @Bean
   public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-    http.csrf(csrf -> csrf.disable())
-        .cors(cors -> {})
-        .authorizeHttpRequests(auth -> auth.anyRequest().permitAll());
+    http
+      .csrf(csrf -> csrf.disable())
+      .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+      .authorizeHttpRequests(auth -> auth.anyRequest().permitAll());
     return http.build();
   }
-  @Bean public PasswordEncoder passwordEncoder() { return new BCryptPasswordEncoder(); }
 
   @Bean
-  public CorsFilter corsFilter() {
+  public PasswordEncoder passwordEncoder() { return new BCryptPasswordEncoder(); }
+
+  @Bean
+  public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration cfg = new CorsConfiguration();
-    cfg.setAllowCredentials(true);
-    cfg.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-    cfg.addAllowedHeader("*"); cfg.addAllowedMethod("*");
-    UrlBasedCorsConfigurationSource src = new UrlBasedCorsConfigurationSource();
-    src.registerCorsConfiguration("/**", cfg);
-    return new CorsFilter(src);
+    cfg.setAllowCredentials(true); // si usarás cookies; si solo Bearer puede ser false
+    List<String> origins = (allowedOrigins == null || allowedOrigins.isBlank())
+        ? List.of()
+        : Arrays.stream(allowedOrigins.split(",")).map(String::trim).toList();
+    cfg.setAllowedOrigins(origins);
+    cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","PATCH","OPTIONS"));
+    cfg.setAllowedHeaders(List.of("Content-Type","Authorization","X-User-Id"));
+    cfg.setExposedHeaders(List.of("Authorization"));
+
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", cfg);
+    return source;
   }
 }
